--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/browser.png" />
+    <link rel="apple-touch-icon" href="/iPhone.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/Android.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="区块链接单网站 - 每月最多支持5个Web3项目，提供专业的技术评估和咨询服务" />
     <meta name="keywords" content="Web3,区块链,技术评估,项目咨询" />
