--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="zh-CN">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/browser.png" />
     <link rel="apple-touch-icon" href="/iPhone.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/Android.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="区块链接单网站 - 每月最多支持5个Web3项目，提供专业的技术评估和咨询服务" />
-    <meta name="keywords" content="Web3,区块链,技术评估,项目咨询" />
-    <title>区块链接单网站 - Web3项目技术评估</title>
+    <meta name="description" content="Professional enterprise blockchain development services and web3 development services. Support up to 5 Web3 projects per month with technical assessment and consulting. Get assessment in 2 minutes." />
+    <meta name="keywords" content="enterprise blockchain development services, web3 development services, blockchain smart contract development services, solana blockchain development services, blockchain development services" />
+    <title>Enterprise Blockchain & Web3 Development Services | BuildWeb3</title>
   </head>
   <body>
     <div id="root"></div>
