--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2CHC039W9G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-2CHC039W9G');
+    </script>
+    
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/browser.png" />
     <link rel="apple-touch-icon" href="/iPhone.png" />
